tests/12-error-with-stack.out
Error: Can't divide by zero
#(tests/12-error-with-stack.p:5)             return 1 / 0
                               |......................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:7)         return rec(num - 1)
                               |................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:7)         return rec(num - 1)
                               |................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:7)         return rec(num - 1)
                               |................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:7)         return rec(num - 1)
                               |................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:7)         return rec(num - 1)
                               |................^
#(tests/12-error-with-stack.p:3)     def rec(num) {
                               |.....^
#(tests/12-error-with-stack.p:10)     rec(5)
                                |.....^
